--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   secret_access_key: ${AWS_S3_SECRET_KEY}
   bucket: "www.ourtransfi.org"
   endpoint: "www.ourtransfi.org.s3-website-ap-southeast-1.amazonaws.com"
-  region: ap-southeast-1
+  region: "ap-southeast-1"
   acl: public-read
   on:
     branch: development
