Travis CI updated to deploy on master
Branches are now reset back to normal for Travis: master changes cause a deployment process, and development remains for staging and ongoing development. A staging endpoint may or may not be provided in the future.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   region: "ap-southeast-1"
   acl: public-read
   on:
-    branch: development
+    branch: master
   skip_cleanup: true
 
 env:
